base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geekconsole
  labels:
    app: geekconsole
spec:
  selector:
    matchLabels:
      app: geekconsole
  template:
    metadata:
      labels:
        app: geekconsole
    spec:
      containers:
        - name: geekconsole
          image: devcraftftw/geekconsole
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: web
