base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: geekconsole
  labels:
    app: geekconsole
spec:
  ports:
  - name: http
    # port: 8080
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: geekconsole
  # type: LoadBalancer
  # type: NodePort
  type: ClusterIP
