base/ingress-prod.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: geekconsole-production
  namespace: geekconsole-production
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`geekconsole-prod.devcraft.app`)
      kind: Rule
      services:
        - name: geekconsole
          port: 3000
      middlewares:
        - name: default-headers
  tls:
    secretName: devcraft-tls
