base/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: geekconsole-stage
  namespace: geekconsole-staging01
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`geekconsole.devcraft.app`) # change to your domain
      kind: Rule
      services:
        - name: geekconsole
          port: 8080
      middlewares:
        - name: default-headers
  tls:
    secretName: devcraft-tls # change to your cert name
